--- a/10-Functions/test/main.html
+++ b/10-Functions/test/main.html
@@ -40,6 +40,6 @@
     <h1>Playing with Functions</h1>
     <button class="buy">Buy new plane 🛩</button>
     <button class="poll">Answer poll ⁉️</button>
-    <script src="prac.js"></script>
+    <script src="testing.js"></script>
   </body>
 </html>
